Added field to use all-gnps pre-trained model

--- a/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
+++ b/notebooks/SeSiMe_MS_Grimur_spectra.ipynb
@@ -153,12 +153,67 @@
     }
    ],
    "source": [
-    "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_gnps_uniquesmiles_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
-    "#file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_allgnps_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
     "file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_Grimur_d300_w300_iter100_loss500_minpeak10_dec2.model'\n",
     "\n",
     "MS_measure.build_model_word2vec(file_model_word2vec, size=300, window=300, \n",
     "                             min_count=1, workers=4, iter=100, \n",
+    "                             use_stored_model=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All 'words' of the given documents were found in the trained word2vec model.\n",
+      "Using present tfidf model.\n",
+      "  Calculated centroid vectors for  4138  of  4138  documents."
+     ]
+    }
+   ],
+   "source": [
+    "# Use peak intensities as extra weights\n",
+    "MS_measure.get_vectors_centroid(method = 'update', #'ignore',\n",
+    "                             extra_weights = MS_documents_intensity, \n",
+    "                             tfidf_weighted = True, \n",
+    "                             weight_method = 'sqrt', #None,\n",
+    "                             tfidf_model = None,\n",
+    "                             extra_epochs = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Or:\n",
+    "### 2) Use network trained on \"all-gnps\" (>400,000 spectra)\n",
+    "+ Use pre-trained model, or train a new one from scratch (takes several hours...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored word2vec model not found!\n",
+      "Calculating new word2vec model...\n",
+      " Epoch  100  of  100 ."
+     ]
+    }
+   ],
+   "source": [
+    "file_model_word2vec = PATH_SAVE_MODEL + 'model_w2v_MS_allgnps_d300_w300_iter50_loss500_minpeak10_dec2.model'\n",
+    "\n",
+    "MS_measure.build_model_word2vec(file_model_word2vec, size=300, window=300, \n",
+    "                             min_count=1, workers=4, iter=50, \n",
     "                             use_stored_model=True)"
    ]
   },
