add new notebook to work with selected spectra from libraries

--- a/notebooks/SeSiMe_MS_librariesAllSmiles_Spec2Vec.ipynb
+++ b/notebooks/SeSiMe_MS_librariesAllSmiles_Spec2Vec.ipynb
@@ -166,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 15792  matches.\n",
-      "Found 1673  cosine score confirmed matches.\n"
+      "Found 2474  matches.\n",
+      "Found 911  cosine score confirmed matches.\n"
      ]
     }
    ],
@@ -189,16 +189,16 @@
     "# set minimal precision\n",
     "decimals = 4\n",
     "\n",
-    "target_mz = np.array(sub_spectra_metadata_ref['precursor_mz'])\n",
+    "target_mz = np.array(sub_spectra_metadata['precursor_mz'])\n",
     "target_mz  = np.round(target_mz, decimals)\n",
     "\n",
-    "for i, precursor_mz in enumerate(sub_spectra_metadata['precursor_mz']):\n",
+    "for i, precursor_mz in enumerate(sub_spectra_metadata_ref['precursor_mz']):\n",
     "    found_ones = np.where(target_mz == np.round(precursor_mz, decimals))[0]\n",
     "    if len(found_ones) > 0:\n",
     "        find_precursor_matches.append(1)\n",
     "        cosine_scores = []\n",
     "        for one in found_ones:\n",
-    "            cosine_scores.append(MS_functions.cosine_score(spectra[i], spectra_ref[one], tol = 0.005)[0])\n",
+    "            cosine_scores.append(MS_functions.cosine_score(spectra_ref[i], spectra[one], tol = 0.5)[0])\n",
     "        find_precursor_matches_1.append((i, precursor_mz, found_ones, cosine_scores))   \n",
     "        if max(cosine_scores) > 0.5:\n",
     "            find_precursor_matches_confirmed.append((i, max(cosine_scores)))\n",
@@ -214,11 +214,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7076"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.array(find_precursor_matches) == 0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Note:\n",
-    "This means that there are 15792 matching precursor m/z, but only 1673 of those matches have a cosine score > 0.5"
+    "This means that there are only matching precursor m/z for 2474 out of 9550 spectra from unique_smiles dataset. And only 911 of those have a cosine score higher than 0.5!"
    ]
   },
   {
