--- a/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
@@ -5172,7 +5172,7 @@
     "            except UnicodeEncodeError:\n",
     "                f.write(l.encode('ascii', 'replace').decode('utf8', 'replace'))\n",
     "                print(l)\n",
-    "        #f.write('\\n')"
+    "        f.write('\\n')"
    ]
   },
   {
