Updates, cleaned notebook

--- a/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
+++ b/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset 1: gnps search (Justin, 2018-03-23)\n",
+    "# Dataset 1: gnps search (Justin, 2018-03-23)\n",
     "+ Spectral libraries search (to get spectra): https://gnps.ucsd.edu/ProteoSAFe/status.jsp?task=6e22f85aeb0744208e872d1640f508d9\n",
     "+ Library matching (to get metadata): https://gnps.ucsd.edu/ProteoSAFe/status.jsp?task=03fba62d93cb4cbfa3f72106d18f7d2c"
    ]
@@ -46,6 +46,66 @@
     "\n",
     "#PATH_NPLINKER = ROOT + \"\\\\nplinker\\\\prototype\\\\\"\n",
     "mgf_file = PATH_MS_DATA + \"METABOLOMICS-SNETS-6e22f85a-download_clustered_spectra-main.mgf\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting function (to visualy inspect two spectra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "def compare_spectra(spec1, spec2, min_mz = None, max_mz = None):\n",
+    "    \"\"\" Plot different spectra together to compare.\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "\n",
+    "    peak_number = []\n",
+    "    new_min_mz = 9999\n",
+    "    new_max_mz = 0\n",
+    "    colors = ['crimson', 'teal']\n",
+    "    for i, spec in enumerate([spec1, spec2]):\n",
+    "        peaks = np.array(spec.peaks.copy())\n",
+    "        peak_number.append(len(peaks))\n",
+    "        peaks[:,1] = peaks[:,1]/np.max(peaks[:,1]); \n",
+    "\n",
+    "        if new_min_mz > np.min(peaks[:,0]):\n",
+    "            new_min_mz = np.min(peaks[:,0])\n",
+    "        if new_max_mz < np.max(peaks[:,0]):\n",
+    "            new_max_mz = np.max(peaks[:,0])\n",
+    "\n",
+    "        markerline, stemlines, baseline = plt.stem(peaks[:,0], (-1)**(i+1)*peaks[:,1], linefmt='-', markerfmt='.', basefmt='r-')\n",
+    "        plt.setp(stemlines, 'color', colors[i])\n",
+    "    \n",
+    "    if min_mz == None: #then update\n",
+    "        min_mz = max(0, (new_min_mz - 5))\n",
+    "    if max_mz == None: #then update\n",
+    "        max_mz = new_max_mz + 10\n",
+    "        \n",
+    "    plt.xlim((min_mz, max_mz))\n",
+    "    plt.grid(True)\n",
+    "    plt.title('Spectrum')\n",
+    "    plt.xlabel('m/z')\n",
+    "    plt.ylabel('peak intensity')\n",
+    "    \n",
+    "    plt.show()\n",
+    "    \n",
+    "    print(\"Number of peaks: \", peak_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Madeleine's script to create MGF for unique_smiles"
    ]
   },
   {
@@ -479,6 +539,7 @@
     "    for i, spectrum in enumerate(reader):\n",
     "        if i/5000 == i//5000: #show progress\n",
     "            print(\"being at \",i, \"of \", len(reader), \"spectra.\")\n",
+    "            \n",
     "        if spectrum['params']['scans'] in scans:\n",
     "            idx = scans.index(spectrum['params']['scans'])\n",
     "            scan = scans[idx]\n",
@@ -527,6 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Dataset 2: all gnps library selection\n",
     "+ Check notebook: SeSiMe_MS_gnps_search_libraries.ipynb\n",
     "+ About 77,000 spectra"
@@ -626,6 +688,8 @@
    "outputs": [],
    "source": [
     "# Compare allGNPS and uniquesmiles MGFs\n",
+    "decimals = 2\n",
+    "\n",
     "pepmasses = []\n",
     "for spec in spectra_ref:\n",
     "    pepmasses.append(spec.metadata['pepmass'][0])\n",
@@ -740,92 +804,6 @@
    "metadata": {},
    "source": [
     "## Further inspect samples..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14, 28906, 0.8672814776662066)"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "find_precursor_matches_confirmed[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8810011255976538"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MS_functions.cosine_score(spectra[23], spectra_ref[810], tol = 0.005)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "def compare_spectra(spec1, spec2, min_mz = None, max_mz = None):\n",
-    "    \"\"\" Plot different spectra together to compare.\n",
-    "    \"\"\"\n",
-    "    plt.figure(figsize=(10,10))\n",
-    "\n",
-    "    peak_number = []\n",
-    "    new_min_mz = 9999\n",
-    "    new_max_mz = 0\n",
-    "    colors = ['crimson', 'teal']\n",
-    "    for i, spec in enumerate([spec1, spec2]):\n",
-    "        peaks = np.array(spec.peaks.copy())\n",
-    "        peak_number.append(len(peaks))\n",
-    "        peaks[:,1] = peaks[:,1]/np.max(peaks[:,1]); \n",
-    "\n",
-    "        if new_min_mz > np.min(peaks[:,0]):\n",
-    "            new_min_mz = np.min(peaks[:,0])\n",
-    "        if new_max_mz < np.max(peaks[:,0]):\n",
-    "            new_max_mz = np.max(peaks[:,0])\n",
-    "\n",
-    "        markerline, stemlines, baseline = plt.stem(peaks[:,0], (-1)**(i+1)*peaks[:,1], linefmt='-', markerfmt='.', basefmt='r-')\n",
-    "        plt.setp(stemlines, 'color', colors[i])\n",
-    "    \n",
-    "    if min_mz == None: #then update\n",
-    "        min_mz = max(0, (new_min_mz - 5))\n",
-    "    if max_mz == None: #then update\n",
-    "        max_mz = new_max_mz + 10\n",
-    "        \n",
-    "    plt.xlim((min_mz, max_mz))\n",
-    "    plt.grid(True)\n",
-    "    plt.title('Spectrum')\n",
-    "    plt.xlabel('m/z')\n",
-    "    plt.ylabel('peak intensity')\n",
-    "    \n",
-    "    plt.show()\n",
-    "    \n",
-    "    print(\"Number of peaks: \", peak_number)"
    ]
   },
   {
@@ -1762,6 +1740,14 @@
    ],
    "source": [
     "print(\"Found matches for\", len(list(set(a))), \"out of\", len(spectra_ref), \"spectra.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note:\n",
+    "Detecting matches by Inchikeys does not deliver additional matching spectra pairs (when compared to search for pepmass)."
    ]
   }
  ],
