--- a/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
+++ b/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
@@ -926,29 +926,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(54,\n",
-       " 177.019,\n",
-       " array([10024, 11186], dtype=int64),\n",
-       " [0.4052961517229117, 0.9236731883370667])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "find_precursor_matches_confirmed[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [
@@ -1185,19 +1162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found matches for 6570 out of 12414 spectra.\n"
+      "Found matches for 6462 out of 12414 spectra from unique_smiles.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Found matches for\", len(list(set(a))), \"out of\", len(spectra_ref), \"spectra.\")"
+    "print(\"Found matches for\", len(list(set(a))), \"out of\", len(spectra_ref), \"spectra from unique_smiles.\")"
    ]
   },
   {
@@ -1727,19 +1704,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found matches for 6462 out of 12414 spectra.\n"
+      "Found matches for 6462 out of 12414 spectra from unique_smiles.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Found matches for\", len(list(set(a))), \"out of\", len(spectra_ref), \"spectra.\")"
+    "print(\"Found matches for\", len(list(set(a))), \"out of\", len(spectra_ref), \"spectra from unique_smiles.\")"
    ]
   },
   {
