Bug fixes. Additional runs. Building of combined dataset.

--- a/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
+++ b/notebooks/Spec2Vec-compare_MS-MS_datasets.ipynb
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,22 +1216,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35941, 10541)"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(inchi_matches), len(smiles_matches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35941"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "matches_inchikey_smiles = [x for x in inchi_matches or x in smiles_matches]\n",
     "#len(list(set(matches_inchikey_smiles)))\n",
     "len(matches_inchikey_smiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6996"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b = zip(*inchi_matches)\n",
+    "len(list(set(a)))"
    ]
   },
   {
@@ -1243,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,14 +1311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found total of 9670 matching spectra.\n"
+      "Found total of 9009 matching spectra.\n"
      ]
     }
    ],
@@ -1285,14 +1328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found matches for 6462 out of 12414 spectra from unique_smiles.\n"
+      "Found matches for 6246 out of 9565 spectra from unique_smiles.\n"
      ]
     }
    ],
@@ -1302,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,14 +1467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found total of 8143 matching spectra.\n"
+      "Found total of 7776 matching spectra.\n"
      ]
     }
    ],
@@ -1441,14 +1484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found matches for 6266 out of 12414 spectra.\n"
+      "Found matches for 6068 out of 9565 spectra.\n"
      ]
     }
    ],
@@ -1497,15 +1540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found spectra matches for 6462 out of 12414 spectra.\n",
-      "Found total of 10323 cosine score confirmed matches.\n"
+      "Found spectra matches for 6170 out of 9565 spectra.\n",
+      "Found total of 9725 cosine score confirmed matches.\n"
      ]
     }
    ],
@@ -1542,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1741,15 +1784,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found spectra matches for 6462 out of 12414 spectra.\n",
-      "Found total of 10323 cosine score confirmed matches.\n"
+      "Found spectra matches for 6170 out of 9565 spectra.\n",
+      "Found total of 9725 cosine score confirmed matches.\n"
      ]
     }
    ],
@@ -1793,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,14 +1870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found matches for 6462 out of 12414 spectra from unique_smiles.\n"
+      "Found matches for 6170 out of 9565 spectra from unique_smiles.\n"
      ]
     }
    ],
@@ -1852,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,22 +1904,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12414"
+       "(3395, 6170)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(no_match_spectra) + len(list(set(a)))"
+    "len(no_match_spectra), len(list(set(a)))"
    ]
   },
   {
@@ -1888,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,16 +1950,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5952, 5952, 5952)"
+       "(3395, 3395, 3395)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1927,37 +1970,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[46, 41, 59, 54, 56, 28, 31, 53, 38, 50]"
+       "3395"
       ]
      },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = [len(x) for x in smiles_no_match]\n",
-    "test[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3394"
-      ]
-     },
-     "execution_count": 175,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,60 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Scan Number: 2',\n",
-       " 'pepmass': [330.11899, None],\n",
-       " 'charge': 1,\n",
-       " 'mslevel': '2',\n",
-       " 'filename': 'C3_GC3_01_2798.mzXML',\n",
-       " 'instrument': 'ion trap',\n",
-       " 'scans': '2',\n",
-       " 'smiles': 'CC(O)(C(O)COC(=O)\\\\C=C\\\\C1=CC(O)=C(O)C=C1)C(O)=O',\n",
-       " 'inchikey': 'RUEPXZDDWQCITK-HWKANZROSA-N',\n",
-       " 'feature_id': '1',\n",
-       " 'precursormass': 330.11899,\n",
-       " 'parentintensity': None,\n",
-       " 'parentmass': 329.1117135480092,\n",
-       " 'singlechargeprecursormass': 330.11899}"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spectra_ref[0].metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'41078' in scans_no_match"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,25 +2001,25 @@
     "\n",
     "with mgf.read(mgf_file) as reader:\n",
     "    for i, spectrum in enumerate(reader):  \n",
-    "        #if spectrum['params']['scans'] in scans_no_match:\n",
-    "        if spectrum['params']['filename'] in filename_no_match:\n",
+    "        if spectrum['params']['scans'] in scans_no_match:\n",
     "            mgf.write((spectrum,), file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3394\n"
+      "3395\n"
      ]
     }
    ],
    "source": [
+    "# check creatd MGF file\n",
     "test = mgf.read(PATH_MS_DATA + \"GNPSLibraries_uniqueSMILES_withFeatureIDs_not_matched.mgf\")\n",
     "print(len(test))\n",
     "test.close()"
@@ -2058,36 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Scan Number: 41078',\n",
-       " 'pepmass': (407.17099, None),\n",
-       " 'charge': [1],\n",
-       " 'mslevel': '2',\n",
-       " 'filename': 'A7_GA7_01_8204.mzXML',\n",
-       " 'instrument': 'ion trap',\n",
-       " 'scans': '41078',\n",
-       " 'smiles': 'CC1CCC\\\\23COC(=O)C2=C/C(O)CC3C1(C)CC/C4=C/C(=O)OC4O',\n",
-       " 'inchikey': 'FSXIRVCJYLNVMM-UHFFFAOYSA-N',\n",
-       " 'feature_id': '9508'}"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spectrum['params']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,7 +2035,7 @@
     "mgf_file1 = PATH_MS_DATA + \"GNPSLibraries_uniqueSMILES_withFeatureIDs_not_matched.mgf\"\n",
     "mgf_file2 = ROOT + \"\\\\Data\\\\GNPS_all\\\\\" + \"all_gnps_with_smiles_191010_modified.mgf\"\n",
     "\n",
-    "output_file= open(ROOT + \"\\\\Data\\\\GNPS_all\\\\\" + \"all_gnps_with_smiles_combined_191014.mgf\", 'w')\n",
+    "output_file= open(ROOT + \"\\\\Data\\\\GNPS_all\\\\\" + \"all_gnps_smiles_combined_191014.mgf\", 'w')\n",
     "\n",
     "with open(mgf_file1 , 'r') as file:\n",
     "    for line in file:\n",
