Added MGF file made from all speclib mgfs including spectra w/o inchikeys

--- a/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import\n",
     "import json\n",
     "import os"
    ]
@@ -39,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Metadata\n",
     "json_file = PATH_MS_DATA + 'gnpslibraryjson_filtered.json'\n",
     "\n",
     "with open(json_file, 'rb') as f:\n",
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +215,7 @@
     "\n",
     "    return new_spectrum\n",
     "\n",
-    "def match_spectra_in_file(filename):\n",
+    "def match_spectra_in_file(filename, matching=True):\n",
     "    matched_spectra = []\n",
     "    with open(filename) as f:\n",
     "        for line in f.readlines():\n",
@@ -221,14 +223,18 @@
     "                # Fresh spectrum\n",
     "                spectrum = []\n",
     "            spectrum.append(line)\n",
+    "            \n",
     "            if line.startswith('END ION'):\n",
-    "                # Check if we have structural info\n",
-    "                if check_spectrum_lines(spectrum):\n",
+    "                \n",
+    "                if check_spectrum_lines(spectrum): # Check if we have structural info\n",
     "                    try:\n",
     "                        spectrum = augment_spectrum(spectrum)\n",
     "                    except KeyError as e:\n",
     "                        pass\n",
     "                    matched_spectra.append(spectrum)\n",
+    "                else: \n",
+    "                    if not matching: # then include all spectra\n",
+    "                        matched_spectra.append(spectrum)\n",
     "    return matched_spectra"
    ]
   },
@@ -5155,6 +5161,116 @@
     "                f.write(l.encode('ascii', 'replace').decode('utf8', 'replace'))\n",
     "                print(l)\n",
     "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create MGF for all spectra (also non matched ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BILELIB19.mgf 177\n",
+      "CASMI.mgf 745\n",
+      "DEREPLICATOR_IDENTIFIED_LIBRARY.mgf 1124\n",
+      "GNPS-COLLECTIONS-MISC.mgf 1170\n",
+      "GNPS-COLLECTIONS-PESTICIDES-NEGATIVE.mgf 1246\n",
+      "GNPS-COLLECTIONS-PESTICIDES-POSITIVE.mgf 1899\n",
+      "GNPS-EMBL-MCF.mgf 2484\n",
+      "GNPS-FAULKNERLEGACY.mgf 2611\n",
+      "GNPS-LIBRARY.mgf 7394\n",
+      "GNPS-NIH-CLINICALCOLLECTION1.mgf 7771\n",
+      "GNPS-NIH-CLINICALCOLLECTION2.mgf 7966\n",
+      "GNPS-NIH-NATURALPRODUCTSLIBRARY.mgf 9233\n",
+      "GNPS-NIH-NATURALPRODUCTSLIBRARY_ROUND2_NEGATIVE.mgf 11096\n",
+      "GNPS-NIH-NATURALPRODUCTSLIBRARY_ROUND2_POSITIVE.mgf 16892\n",
+      "GNPS-NIH-SMALLMOLECULEPHARMACOLOGICALLYACTIVE.mgf 18352\n",
+      "GNPS-NIST14-MATCHES.mgf 24115\n",
+      "GNPS-PRESTWICKPHYTOCHEM.mgf 24258\n",
+      "GNPS-SELLECKCHEM-FDA-PART1.mgf 26646\n",
+      "GNPS-SELLECKCHEM-FDA-PART2.mgf 27302\n",
+      "HMDB.mgf 29537\n",
+      "LDB_NEGATIVE.mgf 29763\n",
+      "LDB_POSITIVE.mgf 29846\n",
+      "MASSBANK.mgf 41845\n",
+      "MASSBANKEU.mgf 43337\n",
+      "MIADB.mgf 43509\n",
+      "MMV_NEGATIVE.mgf 43556\n",
+      "MMV_POSITIVE.mgf 43666\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = PATH_MS_DATA + 'speclibs\\\\'\n",
+    "collected_spectra = []\n",
+    "for d in os.listdir(path):\n",
+    "    for f in os.listdir(os.path.join(path, d)):\n",
+    "        if not f.endswith('.mgf'):\n",
+    "            continue\n",
+    "        sp = match_spectra_in_file(os.path.join(path, d, f), matching=False)\n",
+    "        collected_spectra.extend(sp)\n",
+    "        print(f, len(collected_spectra))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(collected_spectra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "file_mgf = PATH_MS_DATA + 'all_gnps_191015.mgf'\n",
+    "with open(file_mgf, 'w') as f:\n",
+    "    for c in collected_spectra[:]:\n",
+    "        for l in c:\n",
+    "            try:\n",
+    "                f.write(l.encode('utf8', 'replace').decode('utf8', 'replace'))\n",
+    "            except UnicodeEncodeError:\n",
+    "                f.write(l.encode('ascii', 'replace').decode('utf8', 'replace'))\n",
+    "                print(l)\n",
+    "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file = PATH_MS_DATA + 'all_gnps_191015.mgf'\n",
+    "output_file = open(ROOT + \"\\\\Data\\\\GNPS_all\\\\\" + \"all_gnps_191015_modified.mgf\", 'w')\n",
+    "\n",
+    "with open(input_file, 'r') as file:\n",
+    "    for line in file:\n",
+    "        output_file.write(line.replace('-1+', '-1'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file.close()"
    ]
   }
  ],
