--- a/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
+++ b/notebooks/SeSiMe_MS_gnps_search_libraries.ipynb
@@ -69,6 +69,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'CCMSLIB00003139591'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-72-1163c135e757>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgnps_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CCMSLIB00003139591'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'CCMSLIB00003139591'"
+     ]
+    }
+   ],
+   "source": [
+    "gnps_data['CCMSLIB00003139591']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -122,27 +143,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_inchi = []\n",
+    "lst_inchikey = []\n",
+    "lst_smiles = []\n",
+    "for key in gnps_data.keys():\n",
+    "    lst_inchi.append(gnps_data[key]['COMPOUND_INCHI'])\n",
+    "    lst_smiles.append(gnps_data[key]['COMPOUND_INCHIKEY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'COMPOUND_INCHIKEY': 'KNGPFNUOXXLKCN-ZNCJFREWSA-N',\n",
-       " 'COMPOUND_INCHI': 'InChI=1S/C45H73N5O10S3/c1-14-17-24(6)34(52)26(8)37-25(7)30(58-13)18-31-46-29(19-61-31)39-49-45(12,21-62-39)43-50-44(11,20-63-43)42(57)48-32(22(4)15-2)35(53)27(9)40(55)59-36(23(5)16-3)38(54)47-33(28(10)51)41(56)60-37/h19,22-28,30,32-37,51-53H,14-18,20-21H2,1-13H3,(H,47,54)(H,48,57)/t22-,23-,24+,25-,26-,27+,28+,30-,32-,33-,34-,35-,36-,37-,44+,45+/m0/s1',\n",
-       " 'LIBRARY_QUALITY': '1',\n",
-       " 'GNPSID': 'CCMSLIB00000001548',\n",
-       " 'COMPOUND_NAME': 'Hoiamide B',\n",
-       " 'COMPOUND_SMILES': 'CCC[C@@H](C)[C@@H]([C@H](C)[C@@H]1[C@H]([C@H](Cc2nc(cs2)C3=N[C@](CS3)(C4=N[C@](CS4)(C(=O)N[C@H]([C@H]([C@H](C(=O)O[C@H](C(=O)N[C@H](C(=O)O1)[C@@H](C)O)[C@@H](C)CC)C)O)[C@@H](C)CC)C)C)OC)C)O'}"
+       "(9181, 11296)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gnps_data[keys[0]]"
+    "len(set(lst_inchi)), len(set(lst_smiles))"
    ]
   },
   {
@@ -240,6 +270,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GNPS-EMBL-MCF'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir = os.listdir(path)\n",
+    "dir[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GNPS-EMBL-MCF.mgf 585\n"
+     ]
+    }
+   ],
+   "source": [
+    "collected_test = []\n",
+    "d = dir[6]\n",
+    "for f in os.listdir(os.path.join(path, d)):\n",
+    "    if not f.endswith('.mgf'):\n",
+    "        continue\n",
+    "    sp = match_spectra_in_file(os.path.join(path, d, f), matching=False)\n",
+    "    collected_test.extend(sp)\n",
+    "    print(f, len(collected_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37678"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.sum(np.array([len(x) for x in collected_test]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDs = [x[20].split('=')[1] for x in collected_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'CCMSLIB00000479569' in IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_mgf = PATH_MS_DATA + 'TEST.mgf'\n",
+    "with open(file_mgf, 'w') as f:\n",
+    "    for c in collected_test[:]:\n",
+    "        for l in c:\n",
+    "            try:\n",
+    "                f.write(l.encode('utf8', 'replace').decode('utf8', 'replace'))\n",
+    "            except UnicodeEncodeError:\n",
+    "                f.write(l.encode('ascii', 'replace').decode('utf8', 'replace'))\n",
+    "                print(l)\n",
+    "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -292,50 +442,6 @@
     "        sp = match_spectra_in_file(os.path.join(path, d, f))\n",
     "        collected_spectra.extend(sp)\n",
     "        print(f, len(collected_spectra))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BEGIN IONS\\n',\n",
-       " 'TITLE=Theophyllin\\n',\n",
-       " 'LIBRARYQUALITY=1\\n',\n",
-       " 'SMILES=CN1C2=C(NC=N2)C(=O)N(C)C1=O\\n',\n",
-       " 'INCHIKEY=ZFXYFBGIUFBOJW-UHFFFAOYSA-N\\n',\n",
-       " 'INCHI=\"InChI=1S/C7H8N4O2/c1-10-5-4(8-3-9-5)6(12)11(2)7(10)13/h3H,1-2H3,(H,8,9)\"\\n',\n",
-       " 'PEPMASS=179.057\\n',\n",
-       " 'CHARGE=1\\n',\n",
-       " 'MSLEVEL=2\\n',\n",
-       " 'SOURCE_INSTRUMENT=LC-ESI-Orbitrap\\n',\n",
-       " 'FILENAME=Training_001.mgf\\n',\n",
-       " 'SEQ=*..*\\n',\n",
-       " 'IONMODE= Negative\\n',\n",
-       " 'ORGANISM=CASMI\\n',\n",
-       " 'NAME=Theophyllin M-H\\n',\n",
-       " 'PI=CASMI\\n',\n",
-       " 'DATACOLLECTOR=CASMI2016\\n',\n",
-       " 'PUBMED=33919\\n',\n",
-       " 'SUBMITUSER=lfnothias\\n',\n",
-       " 'TAGS=\\n',\n",
-       " 'SPECTRUMID=CCMSLIB00000579358\\n',\n",
-       " 'SCANS=1\\n',\n",
-       " '164.033997\\t32294.5\\n',\n",
-       " '179.057495\\t129907.101562\\n',\n",
-       " 'END IONS\\n']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "collected_spectra[0]"
    ]
   },
   {
